fix: wrong margin on the title on the page

--- a/src/catalog/views/buyView.scss
+++ b/src/catalog/views/buyView.scss
@@ -5,6 +5,7 @@
   &__title {
     font-size: 32px;
     font-weight: 500;
+    margin-bottom: 20px;
   }
 
   &__shadow {
